--- a/src/components/VisionCreationChat.css
+++ b/src/components/VisionCreationChat.css
@@ -145,7 +145,8 @@
   font-size: 16px;
   font-family: inherit;
   line-height: 1.8;
-  color: #333;
+  color: #333 !important;
+  background: white;
   resize: vertical;
   min-height: 200px;
   transition: border-color 0.2s;
