--- a/src/components/AwakeCore.css
+++ b/src/components/AwakeCore.css
@@ -748,7 +748,7 @@
   margin-top: 5px;
 }
 
-/* Current Needs Section */
+/* Current State Section */
 .needs-section {
   background: white;
   padding: 25px;
